# mcpify

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  perf.yml  publish-crate.yml  release.yml
docs/: architecture.md  prd.md  product-brief.md  profiling.md  progress-output-plan.md  project-manifest.md  v1-implementation-plan.md  v10-implementation-plan.md  v2-implementation-plan.md  v3-implementation-plan.md  v4-implementation-plan.md  v5-implementation-plan.md  v6-implementation-plan.md  v7-implementation-plan.md  v8-implementation-plan.md  v9-implementation-plan.md
scripts/: bottleneck-report.sh  coverage.sh  profile.sh
src/: cli.rs  context.rs  lib.rs  main.rs  package_preflight.rs  progress.rs  project_config.rs  schemas_asset.rs  store_compress.rs  sync_project.rs
src/add_version/: demote.rs  ledger.rs  marker_region.rs  mod.rs  seed.rs  sync.rs
src/auth_profile/: classify.rs  descriptor.rs  mod.rs  prompt.rs
src/db/: mod.rs  open.rs  populate.rs  schema.rs
src/openapi/: fetch.rs  mod.rs  normalize.rs  parse.rs  schema_resolve.rs  source.rs
src/pipeline/: dir_guard.rs  mod.rs
src/targets/: mod.rs
src/targets/csharp/: context.rs  emit.rs  (+3 more)
tests/: README.md  docker_multiversion.rs  e2e_generation.rs  e2e_multi_version.rs  generated_container_docs.rs  generation_fixtures.rs  go_build_smoke.rs  golden_csharp.rs  golden_go.rs  golden_python.rs  golden_rust.rs  golden_typescript.rs  recommended_features.rs  rollback.rs  workflow_contracts.rs
tests/snapshots/: golden_csharp__csharp_auth_manager_cs_all_four_schemes.snap  golden_csharp__csharp_auth_manager_cs_single_basic_scheme.snap  golden_csharp__csharp_config_cs_all_four_schemes.snap  golden_csharp__csharp_config_cs_single_basic_scheme.snap  golden_csharp__csharp_file_tree_all_four_schemes.snap  golden_csharp__csharp_file_tree_single_basic_scheme.snap  golden_csharp__csharp_file_tree_single_oauth2_scheme.snap  golden_csharp__csharp_mcp_server_cs_all_four_schemes.snap  golden_csharp__csharp_out_csproj_all_four_schemes.snap  golden_csharp__csharp_out_csproj_single_basic_scheme.snap  (+45 more)
(+437 files in other folders)
